Add components and refact

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -10,3 +10,18 @@
   margin-bottom: 14px;
   z-index: 1;
 }
+
+.loginBtn {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 500;
+  margin-left: 15px;
+  svg {
+    margin-right: 10px;
+  }
+  &:hover {
+    color: #1e7faf;
+  }
+}
